src/components/sidebar/chats/chatcard.css
.chatcard{
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin: 15px;
    padding: 10px;
    border-radius: 10px;
}

.chatcard:hover{
   background-color: #c9c9c9;
}

.chat-details{
    display: flex;
    align-items: center;
    gap: 15px;
}

.chat-details img{
    border-radius: 50%;
    width: 30%;
}

.name{
    font-weight: bold;
}

.name-message{
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: 5px;
}

.date{
    color: #6c6565;
    font-size: smaller;
}

.message{
    display: flex;
    width: 4rem;
    overflow: hidden;
    text-overflow: ellipsis;
    color: #6c6565;
    white-space: nowrap;
}

